--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
@@ -31,16 +31,10 @@
             @Html.DisplayFor(model => model.TattoosDesign.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TattoosDesign.Artist)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.Artist.ArtistId)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TattoosDesign.Style)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.Style.StyleId)
+            @Html.DisplayFor(model => model.TattoosDesign.Style.StyleName)
         </dd>
     </dl>
     
