add layout for artist + staff

--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/Index.cshtml
@@ -3,4 +3,5 @@
 @{
     ViewData["Title"] = "Staff page";
 }
-
+<a asp-page="./AppointmentManage/Index">Manage studio's Appointment</a>
+<a asp-page="./ArtistManage/Index">Manage studio's Artist</a>
