--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Appointment.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Appointment.cshtml
@@ -41,9 +41,14 @@
                     } else if (item.Status == 3)
                     {
                         <div>done</div>
-                    } else
+                    }
+                    else if (item.Status == 4)
                     {
                         <div>cancel</div>
+                    }
+                    else if (item.Status == 5)
+                    {
+                        <div>paid</div>
                     }
                 </td>
                 <td>
