--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Index.cshtml
@@ -49,8 +49,14 @@
                         <div>done</div>
                     }
                     else
+                    if (item.Status == 4)
                     {
-                        <div>cancel</div>
+                        <div>cancelled</div>
+                    }
+                    else
+                    if (item.Status == 5)
+                    {
+                        <div>paid</div>
                     }
                 </td>
                 <td>
