--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Cart.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Cart.cshtml
@@ -27,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-        @if (Model.cart != null)
+        @if (Model.cart != null && Model.cart.Count>0)
         {
             foreach (var item in Model.appointmentDetail)
             {
@@ -57,7 +57,7 @@
                         @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
-                        <a asp-page="./Edit" asp-route-id="@item.AppointmentDetailId">Edit</a> |
+                        <a asp-page="SelectSchedule" asp-route-id="@item.ServiceId">Edit</a> |
                         <a asp-page="Cart" asp-page-handler="delete" asp-route-id="@item.ServiceId">Delete</a>
                     </td>
                 </tr>
