--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create staff account</h1>
 
 <h4>Account</h4>
 <hr />
@@ -24,16 +24,18 @@
                 <span asp-validation-for="Account.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account.TattooLoverId" class="control-label"></label>
-                <select asp-for="Account.TattooLoverId" class ="form-control" asp-items="ViewBag.TattooLoverId"></select>
+                <label asp-for="Staff.StaffName" class="control-label"></label>
+                <input asp-for="Staff.StaffName" class="form-control" />
+                <span asp-validation-for="Account.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account.ArtistId" class="control-label"></label>
-                <select asp-for="Account.ArtistId" class ="form-control" asp-items="ViewBag.ArtistId"></select>
+                <label asp-for="Staff.StaffPhone" class="control-label"></label>
+                <input asp-for="Staff.StaffPhone" class="form-control" />
+                <span asp-validation-for="Account.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account.StaffId" class="control-label"></label>
-                <select asp-for="Account.StaffId" class ="form-control" asp-items="ViewBag.StaffId"></select>
+                <label asp-for="Staff.StudioId" class="control-label"></label>
+                <select asp-for="Staff.StudioId" class="form-control" asp-items="ViewBag.StudioId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -41,7 +43,7 @@
         </form>
     </div>
 </div>
-
+<div>@Model.Msg</div>
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
