--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Delete.cshtml
@@ -40,7 +40,13 @@
     
     <form method="post">
         <input type="hidden" asp-for="Account.Username" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @if (Model.Account.Status == 1)
+        {
+            <input type="submit" value="Inactive" />
+        } else
+        {
+            <input type="submit" value="Active" />
+        }
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
