--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.TattoosDesignName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImgUri)
+                    <img src=@item.ImgUri width="286" height="135" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
