--- a/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
                     }
                     else
                     {
-                        <a class="navbar-brand" asp-area="" asp-page="/Index">ArtTattooProject</a>
+                        <a class="navbar-brand" asp-area="" asp-page="/LoginPage">ArtTattooProject</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
