--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
@@ -33,9 +33,8 @@
                 <input asp-for="Artist.Phone" class="form-control" />
                 <span asp-validation-for="Artist.Phone" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input asp-for="studio.Name" class="form-control" disabled />
-            </div>
+            
+                <input type="hidden" asp-for="studio.Name" class="form-control" disabled />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
