--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/SelectSchedule.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/SelectSchedule.cshtml
@@ -29,7 +29,7 @@ else
                         <form method="post">
                             <input type="hidden" asp-for="@Model.serviceID" value="@Model.Service.ServiceId" />
                             <input type="hidden" asp-for="@Model.scheduleID" value="@item.ScheduleId" />
-                            <input type="submit" value="Add to cart" class="btn btn-primary" />
+                            <input type="submit" value="Book this schedule" class="btn btn-primary" />
                         </form>
                     </td>
                 </tr>
