--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
@@ -24,6 +24,10 @@
                 <span asp-validation-for="Service.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Service.TattoosDesignId" class="control-label"></label>
+                <select asp-for="Service.TattoosDesignId" class="form-control" asp-items="ViewBag.Design"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
