update db, admin delete studio, customer display service

--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Index.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.AdminPage.AccountManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Account Manage";
 }
 
-<h1>Index</h1>
+<h1>Account Manage</h1>
 
 <p>
     <a asp-page="Create">Create New staff</a>
