--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.ArtistPage.SchedulesManage.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create schedule";
 }
 
-<h1>Create</h1>
+<h1>Add new free schedule</h1>
 
 <h4>Schedule</h4>
 <hr />
