--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Edit.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.ArtistPage.SchedulesManage.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit schedule";
 }
 
-<h1>Edit</h1>
+<h1>Edit schedule</h1>
 
 <h4>Schedule</h4>
 <hr />
