--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.ArtistPage.ServiceManage.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create service";
 }
 
-<h1>Create</h1>
+<h1>Add new service</h1>
 
 <h4>Service</h4>
 <hr />
