--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Index.cshtml
@@ -2,13 +2,13 @@
 @model ArtTattooProject.Pages.ArtistPage.ServiceManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Service";
 }
 
-<h1>Index</h1>
+<h1>Service</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add new service</a>
 </p>
 <table class="table">
     <thead>
