--- a/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                                         <a class="nav-link text-dark" asp-area="Pages" asp-page="../StudioManage/Index">Studio |</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="Pages" asp-page="../CertificateManage/Index">Certificate |</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="Pages" asp-page="../StyleManage/Index">Style |</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="../Index" asp-page-handler="Logout">Log out</a>
                                     </li>
                                 </ul>
