--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Cart.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Cart.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @model ArtTattooProject.Pages.TattooLoverPage.CartModel
 @{
+    ViewData["Title"] = "Cart";
 }
+<h1>Cart</h1>
 <table class="table">
     <thead>
         <tr>
