--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/Index.cshtml
@@ -16,6 +16,7 @@
 </form>
     <a asp-page="./Appointment">Appointment history</a>
 </div>
+<h4>Service</h4>
 <table class="table">
     <thead>
         <tr>
