--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/CertificateManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/CertificateManage/Index.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.AdminPage.CertificateManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Certificate Manage";
 }
 
-<h1>Index</h1>
+<h1>Certificate Manage</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -26,7 +26,7 @@
                 @Html.DisplayFor(modelItem => item.CertificateName)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.CertificateId">Edit</a> |
+                <a asp-page="./Edit" asp-route-id="@item.CertificateId">Edit</a>
             </td>
         </tr>
 }
