--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to active/inactive this studio?</h3>
 <div>
     <h4>Studio</h4>
     <hr />
@@ -40,7 +40,14 @@
     
     <form method="post">
         <input type="hidden" asp-for="Studio.StudioId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @if (Model.Studio.Status == 1)
+        {
+            <input type="submit" value="Inactive" />
+        }
+        else
+        {
+            <input type="submit" value="Active" />
+        }
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
