--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
@@ -2,10 +2,10 @@
 @model ArtTattooProject.Pages.ArtistPage.SchedulesManage.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete schedule";
 }
 
-<h1>Delete</h1>
+<h1>Delete schedule</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
