--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
@@ -5,10 +5,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Artist</h4>
+    <h1>Details Artist</h1>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -22,12 +20,6 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Artist.Phone)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Artist.Studio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Artist.Studio.StudioId)
         </dd>
     </dl>
 </div>
@@ -103,7 +95,8 @@
                     @Html.DisplayFor(modelItem => item.TattoosDesignName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ImgUri)
+                    <img src=@item.ImgUri width="286" height="135" />
+                   @*  @Html.DisplayFor(modelItem => item.ImgUri) *@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
