--- a/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/AppointmentDetails.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/TattooLoverPage/AppointmentDetails.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Appointment Details";
 }
-
+<h1>Appointment Details</h1>
 <table class="table">
     <thead>
         <tr>
