--- a/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
@@ -71,6 +71,9 @@
                                         <a class="nav-link text-dark" asp-area="Pages" asp-page="../ServiceManage/Index">Service |</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-page="./Profile">My Profile |</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="../Index" asp-page-handler="Logout">Log out</a>
                                     </li>
                                 </ul>
@@ -95,6 +98,9 @@
                                         <div class="nav-link text-dark">welcome @account.Username |</div>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-page="./Profile">My Profile |</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="../Index" asp-page-handler="Logout">Log out</a>
                                     </li>
                                 </ul>
@@ -117,6 +123,9 @@
                                     </li>
                                     <li class="nav-item">
                                         <div class="nav-link text-dark">welcome @account.Username |</div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-page="./Profile">My Profile |</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="./Index" asp-page-handler="Logout">Log out</a>
