--- a/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                         <a class="nav-link text-dark" asp-area="Pages" asp-page="../ServiceManage/Index">Service |</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-page="./Profile">My Profile |</a>
+                                        <a class="nav-link text-dark" asp-page="../Profile">My Profile |</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="../Index" asp-page-handler="Logout">Log out</a>
@@ -98,7 +98,7 @@
                                         <div class="nav-link text-dark">welcome @account.Username |</div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-page="./Profile">My Profile |</a>
+                                        <a class="nav-link text-dark" asp-page="../Profile">My Profile |</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-page="../Index" asp-page-handler="Logout">Log out</a>
