--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
@@ -45,7 +45,7 @@
 </div>
 <div>@Model.Msg</div>
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Back</a>
 </div>
 
 @section Scripts {
