--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Delete.cshtml
@@ -47,6 +47,6 @@
         {
             <input type="submit" value="Active" />
         }
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">Back</a>
     </form>
 </div>
