--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/CertificateManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/CertificateManage/Create.cshtml
@@ -26,7 +26,7 @@
 </div>
 <div>@Model.Msg</div>
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Back</a>
 </div>
 
 @section Scripts {
