--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Details.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Details.cshtml
@@ -39,7 +39,7 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Studio?.StudioId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Back</a>
 </div>
 
 <table class="table">
