--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
@@ -29,7 +29,7 @@
         <input type="hidden" asp-for="CertificateArtist.CertificateId" />
         <input type="hidden" asp-for="CertificateArtist.ArtistId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">Back</a>
     </form>
 </div>
 
