--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
@@ -41,6 +41,6 @@
     <form method="post">
         <input type="hidden" asp-for="TattoosDesign.TattoosDesignId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">Back</a>
     </form>
 </div>
