--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
@@ -24,8 +24,7 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Artist?.ArtistId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Back</a>
 </div>
 
 <table class="table">
