--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/MyProfile/Profile.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/MyProfile/Profile.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ArtTattooProject.Pages.StaffPage.ProfileModel
+@model ProfileModel
 @{
     ViewData["Title"] = "Profile";
 }
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Back</a>
 </div>
 
 @section Scripts {
